Fix game grid alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -155,7 +155,6 @@ ul {
   /* transition: 0.2s ease; */
 }
 
-.games__game-container,
 .games__img-container img,
 .games__img-container {
   height: 200px;
